# Jukebox

./: .gitignore  README.md  README.txt  Track List.txt  default.css  example-config.json  index.html  main.js  mod.js  package-lock.json  package.json  plugin.js  server.js  settings.json  style.css
desktop/: .gitignore  Cargo.toml
desktop/src/: gui.rs  main.rs  music.rs  scheduler.rs  util.rs
modules/: app.js  player.js  song.js  timer.js
src/: config.json  custom.css  default.css  index.html  main.js  new.js  style.css
src/modules/: app.js
web/modules/: app.js
