[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
# There's currently a dependency issue for rodio 0.13.0 - 0.16.0.
# rodio --> cpal
# cpal --> nix
# cpal --> alsa --> nix
# There are two conflicting versions of nix. cpal's git repo updated to resolve this, but some of the internal code of rodio must change in order to update the dependency on cpal. Look into this?
rodio = "0.12.0"
